cmake_minimum_required(VERSION 3.30)
project(Competitive_programming_database)

set(CMAKE_CXX_STANDARD 14)

add_executable(Competitive_programming_database
    LeetCode/Daily/Check_if_Grid_can_be_Cut_into_Sections.cpp
    LeetCode/Daily/Count_Days_Without_Meetings.cpp
    LeetCode/Daily/Count_the_Number_of_Complete_Components.cpp
    LeetCode/Daily/Find_All_Possible_Recipes_from_Given_Supplies.cpp
    LeetCode/Daily/Number_of_Ways_to_Arrive_at_Destination.cpp
        LeetCode/Daily/Minimum_Index_of_a_Valid_Split.cpp
        LeetCode/Daily/Minimum_Cost_to_Divide_Array_Into_Subarrays.cpp
        LeetCode/Daily/Put_Marbles_in_Bags.cpp
        LeetCode/Daily/Solving_Questions_With_Brainpower.cpp
        LeetCode/Daily/Largest_Divisible_Subse.cpp
)
